tests/paczka1/small_fuzzy/25809654.err
Error in line 1: 4TQC6 A768 10,7
Error in line 2: 2boIesc A232 92,2
Error in line 8: A979 A232 75,3
Error in line 15: 2boIesc A676 -1,6
Error in line 13: A979 A979 36,2
